pseudo class selector

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,9 +35,17 @@
 					<div class="rightContent">
 						<h2>Lorem ipsum dolor sit amet consectetur adipisicing </h2>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam nobis quisquam unde itaque, repudiandae dignissimos dolorem cumque et. Nisi perspiciatis vero quaerat mollitia iusto illo rem possimus quod sapiente!</p>
+						<ul>
+							<li><a href="https://php.net">PHP</a></li>
+							<li>HTML/CSS</li>
+							<li>Javascript</li>
+							<li>Nuxtjs</li>
+							<li>Nodejs</li>
+							<li>C/C++</li>
+							<li>Java</li>
+							<li>TypeScript</li>
+							<li>C# .net</li>
+						</ul>
 					</div>
 				</div>
 				<div class="footer">
